# py-fastapi-boilerplate

./: .dockerignore  .editorconfig  .gitignore  README.md  pyproject.toml  sonar-project.properties
app/: main.py
app/client/: auth_client.py  db_client.py  mysql_client.py  postgresql_client.py
app/config/: config.yaml
app/db/mysql/: connection.py  helper.py
app/db/postgresql/: connection.py  helper.py
app/exception/: __init__.py  app.py  auth.py  db.py  exception.py  mysql.py
app/misc/: constants.py  errors.py  logging.py  models.py  permissions_checker.py  retry.py  utils.py
app/router/default/: models.py  router.py
app/router/misc/: models.py  router.py
app/service/: manager.py
app/sql/: queries.py
tests/: conftest.py
tests/misc/: test_models.py
tests/resources/: config-test-unit.yaml
tests/router/: test_router.py
